Lang/Exam/src/main/java/barbatos_rex1/exam/antlr4/lang/simple/SimpleExamGrammarParser.java
// Generated from D:/Repos/LAPRIV-2022-23/Lang/langs/exam\SimpleExamGrammar.g4 by ANTLR 4.12.0
package barbatos_rex1.exam.antlr4.lang.simple;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class SimpleExamGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.12.0", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, MATCHING=6, RELATOR=7, DEFINE=8, 
		SOME=9, SECTION=10, ID=11, MAXIMUM=12, DIFFICULTY=13, OF=14, USING=15, 
		POOL=16, EXPORT=17, EXAM=18, WITH=19, TITLE=20, COMA=21, DESCRIPTION=22, 
		GRADING=23, FEEDBACK=24, AND=25, SECTIONS=26, LARR=27, RARR=28, NUMBER=29, 
		QUESTIONS=30, QUESTION=31, ANSWERS=32, KEYS=33, COL=34, AS=35, STRING=36, 
		HEADER_OPTION=37, INT=38, BOOLEAN=39, REAL=40, WS=41;
	public static final int
		RULE_start = 0, RULE_pool = 1, RULE_pool_body = 2, RULE_pool_body_atomic = 3, 
		RULE_matching = 4, RULE_matching_map = 5, RULE_matching_map_atomic = 6, 
		RULE_multiple = 7, RULE_multiple_map = 8, RULE_multiple_map_atomic = 9, 
		RULE_short = 10, RULE_missing = 11, RULE_key_map = 12, RULE_key_map_atomic = 13, 
		RULE_num = 14, RULE_true_false = 15, RULE_section = 16, RULE_section_maximum_number_of_questions = 17, 
		RULE_exam = 18, RULE_sections_arr = 19;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "pool", "pool_body", "pool_body_atomic", "matching", "matching_map", 
			"matching_map_atomic", "multiple", "multiple_map", "multiple_map_atomic", 
			"short", "missing", "key_map", "key_map_atomic", "num", "true_false", 
			"section", "section_maximum_number_of_questions", "exam", "sections_arr"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'multiple choice'", "'short answer'", "'missing words'", "'numerical'", 
			"'true or false'", "'matching'", "'<->'", "'define'", "'some'", "'section'", 
			"'id'", "'maximum'", "'difficulty'", "'of'", "'using'", "'pool'", "'export'", 
			"'exam'", "'with'", "'title'", "','", "'description'", "'grading'", "'feedback'", 
			"'and'", "'sections'", "'['", "']'", "'number'", "'questions'", "'question'", 
			"'answers'", "'keys'", "':'", "'as'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, "MATCHING", "RELATOR", "DEFINE", 
			"SOME", "SECTION", "ID", "MAXIMUM", "DIFFICULTY", "OF", "USING", "POOL", 
			"EXPORT", "EXAM", "WITH", "TITLE", "COMA", "DESCRIPTION", "GRADING", 
			"FEEDBACK", "AND", "SECTIONS", "LARR", "RARR", "NUMBER", "QUESTIONS", 
			"QUESTION", "ANSWERS", "KEYS", "COL", "AS", "STRING", "HEADER_OPTION", 
			"INT", "BOOLEAN", "REAL", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SimpleExamGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SimpleExamGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StartContext extends ParserRuleContext {
		public ExamContext exam() {
			return getRuleContext(ExamContext.class,0);
		}
		public List<PoolContext> pool() {
			return getRuleContexts(PoolContext.class);
		}
		public PoolContext pool(int i) {
			return getRuleContext(PoolContext.class,i);
		}
		public List<SectionContext> section() {
			return getRuleContexts(SectionContext.class);
		}
		public SectionContext section(int i) {
			return getRuleContext(SectionContext.class,i);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleExamGrammarListener ) ((SimpleExamGrammarListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleExamGrammarListener ) ((SimpleExamGrammarListener)listener).exitStart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleExamGrammarVisitor ) return ((SimpleExamGrammarVisitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(41); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(40);
					pool();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(43); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			setState(46); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(45);
				section();
				}
				}
				setState(48); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==DEFINE );
			setState(50);
			exam();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PoolContext extends ParserRuleContext {
		public TerminalNode DEFINE() { return getToken(SimpleExamGrammarParser.DEFINE, 0); }
		public TerminalNode QUESTION() { return getToken(SimpleExamGrammarParser.QUESTION, 0); }
		public TerminalNode POOL() { return getToken(SimpleExamGrammarParser.POOL, 0); }
		public TerminalNode STRING() { return getToken(SimpleExamGrammarParser.STRING, 0); }
		public TerminalNode COL() { return getToken(SimpleExamGrammarParser.COL, 0); }
		public Pool_bodyContext pool_body() {
			return getRuleContext(Pool_bodyContext.class,0);
		}
		public PoolContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pool; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleExamGrammarListener ) ((SimpleExamGrammarListener)listener).enterPool(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleExamGrammarListener ) ((SimpleExamGrammarListener)listener).exitPool(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleExamGrammarVisitor ) return ((SimpleExamGrammarVisitor<? extends T>)visitor).visitPool(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PoolContext pool() throws RecognitionException {
		PoolContext _localctx = new PoolContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_pool);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(52);
			match(DEFINE);
			setState(53);
			match(QUESTION);
			setState(54);
			match(POOL);
			setState(55);
			match(STRING);
			setState(56);
			match(COL);
			setState(57);
			pool_body();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Pool_bodyContext extends ParserRuleContext {
		public Pool_body_atomicContext pool_body_atomic() {
			return getRuleContext(Pool_body_atomicContext.class,0);
		}
		public Pool_bodyContext pool_body() {
			return getRuleContext(Pool_bodyContext.class,0);
		}
		public Pool_bodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pool_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleExamGrammarListener ) ((SimpleExamGrammarListener)listener).enterPool_body(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleExamGrammarListener ) ((SimpleExamGrammarListener)listener).exitPool_body(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleExamGrammarVisitor ) return ((SimpleExamGrammarVisitor<? extends T>)visitor).visitPool_body(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Pool_bodyContext pool_body() throws RecognitionException {
		Pool_bodyContext _localctx = new Pool_bodyContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_pool_body);
		try {
			setState(63);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(59);
				pool_body_atomic();
				setState(60);
				pool_body();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(62);
				pool_body_atomic();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Pool_body_atomicContext extends ParserRuleContext {
		public MatchingContext matching() {
			return getRuleContext(MatchingContext.class,0);
		}
		public MultipleContext multiple() {
			return getRuleContext(MultipleContext.class,0);
		}
		public ShortContext short_() {
			return getRuleContext(ShortContext.class,0);
		}
		public MissingContext missing() {
			return getRuleContext(MissingContext.class,0);
		}
		public NumContext num() {
			return getRuleContext(NumContext.class,0);
		}
		public True_falseContext true_false() {
			return getRuleContext(True_falseContext.class,0);
		}
		public Pool_body_atomicContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pool_body_atomic; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleExamGrammarListener ) ((SimpleExamGrammarListener)listener).enterPool_body_atomic(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleExamGrammarListener ) ((SimpleExamGrammarListener)listener).exitPool_body_atomic(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleExamGrammarVisitor ) return ((SimpleExamGrammarVisitor<? extends T>)visitor).visitPool_body_atomic(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Pool_body_atomicContext pool_body_atomic() throws RecognitionException {
		Pool_body_atomicContext _localctx = new Pool_body_atomicContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_pool_body_atomic);
		try {
			setState(71);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case MATCHING:
				enterOuterAlt(_localctx, 1);
				{
				setState(65);
				matching();
				}
				break;
			case T__0:
				enterOuterAlt(_localctx, 2);
				{
				setState(66);
				multiple();
				}
				break;
			case T__1:
				enterOuterAlt(_localctx, 3);
				{
				setState(67);
				short_();
				}
				break;
			case T__2:
				enterOuterAlt(_localctx, 4);
				{
				setState(68);
				missing();
				}
				break;
			case T__3:
				enterOuterAlt(_localctx, 5);
				{
				setState(69);
				num();
				}
				break;
			case T__4:
				enterOuterAlt(_localctx, 6);
				{
				setState(70);
				true_false();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MatchingContext extends ParserRuleContext {
		public Matching_mapContext ques;
		public Matching_mapContext asnw;
		public TerminalNode MATCHING() { return getToken(SimpleExamGrammarParser.MATCHING, 0); }
		public TerminalNode QUESTION() { return getToken(SimpleExamGrammarParser.QUESTION, 0); }
		public TerminalNode STRING() { return getToken(SimpleExamGrammarParser.STRING, 0); }
		public TerminalNode QUESTIONS() { return getToken(SimpleExamGrammarParser.QUESTIONS, 0); }
		public List<TerminalNode> COL() { return getTokens(SimpleExamGrammarParser.COL); }
		public TerminalNode COL(int i) {
			return getToken(SimpleExamGrammarParser.COL, i);
		}
		public TerminalNode ANSWERS() { return getToken(SimpleExamGrammarParser.ANSWERS, 0); }
		public TerminalNode DIFFICULTY() { return getToken(SimpleExamGrammarParser.DIFFICULTY, 0); }
		public TerminalNode INT() { return getToken(SimpleExamGrammarParser.INT, 0); }
		public List<Matching_mapContext> matching_map() {
			return getRuleContexts(Matching_mapContext.class);
		}
		public Matching_mapContext matching_map(int i) {
			return getRuleContext(Matching_mapContext.class,i);
		}
		public MatchingContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_matching; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleExamGrammarListener ) ((SimpleExamGrammarListener)listener).enterMatching(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleExamGrammarListener ) ((SimpleExamGrammarListener)listener).exitMatching(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleExamGrammarVisitor ) return ((SimpleExamGrammarVisitor<? extends T>)visitor).visitMatching(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MatchingContext matching() throws RecognitionException {
		MatchingContext _localctx = new MatchingContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_matching);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			match(MATCHING);
			setState(74);
			match(QUESTION);
			setState(75);
			match(STRING);
			setState(76);
			match(QUESTIONS);
			setState(77);
			match(COL);
			setState(78);
			((MatchingContext)_localctx).ques = matching_map();
			setState(79);
			match(ANSWERS);
			setState(80);
			match(COL);
			setState(81);
			((MatchingContext)_localctx).asnw = matching_map();
			setState(82);
			match(DIFFICULTY);
			setState(83);
			match(COL);
			setState(84);
			match(INT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Matching_mapContext extends ParserRuleContext {
		public Matching_map_atomicContext matching_map_atomic() {
			return getRuleContext(Matching_map_atomicContext.class,0);
		}
		public Matching_mapContext matching_map() {
			return getRuleContext(Matching_mapContext.class,0);
		}
		public Matching_mapContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_matching_map; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleExamGrammarListener ) ((SimpleExamGrammarListener)listener).enterMatching_map(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleExamGrammarListener ) ((SimpleExamGrammarListener)listener).exitMatching_map(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleExamGrammarVisitor ) return ((SimpleExamGrammarVisitor<? extends T>)visitor).visitMatching_map(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Matching_mapContext matching_map() throws RecognitionException {
		Matching_mapContext _localctx = new Matching_mapContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_matching_map);
		try {
			setState(90);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(86);
				matching_map_atomic();
				setState(87);
				matching_map();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(89);
				matching_map_atomic();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Matching_map_atomicContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(SimpleExamGrammarParser.INT, 0); }
		public TerminalNode RELATOR() { return getToken(SimpleExamGrammarParser.RELATOR, 0); }
		public TerminalNode STRING() { return getToken(SimpleExamGrammarParser.STRING, 0); }
		public Matching_map_atomicContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_matching_map_atomic; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleExamGrammarListener ) ((SimpleExamGrammarListener)listener).enterMatching_map_atomic(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleExamGrammarListener ) ((SimpleExamGrammarListener)listener).exitMatching_map_atomic(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleExamGrammarVisitor ) return ((SimpleExamGrammarVisitor<? extends T>)visitor).visitMatching_map_atomic(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Matching_map_atomicContext matching_map_atomic() throws RecognitionException {
		Matching_map_atomicContext _localctx = new Matching_map_atomicContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_matching_map_atomic);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			match(INT);
			setState(93);
			match(RELATOR);
			setState(94);
			match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MultipleContext extends ParserRuleContext {
		public TerminalNode QUESTION() { return getToken(SimpleExamGrammarParser.QUESTION, 0); }
		public TerminalNode STRING() { return getToken(SimpleExamGrammarParser.STRING, 0); }
		public Multiple_mapContext multiple_map() {
			return getRuleContext(Multiple_mapContext.class,0);
		}
		public TerminalNode DIFFICULTY() { return getToken(SimpleExamGrammarParser.DIFFICULTY, 0); }
		public TerminalNode COL() { return getToken(SimpleExamGrammarParser.COL, 0); }
		public TerminalNode INT() { return getToken(SimpleExamGrammarParser.INT, 0); }
		public MultipleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_multiple; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleExamGrammarListener ) ((SimpleExamGrammarListener)listener).enterMultiple(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleExamGrammarListener ) ((SimpleExamGrammarListener)listener).exitMultiple(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleExamGrammarVisitor ) return ((SimpleExamGrammarVisitor<? extends T>)visitor).visitMultiple(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MultipleContext multiple() throws RecognitionException {
		MultipleContext _localctx = new MultipleContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_multiple);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			match(T__0);
			setState(97);
			match(QUESTION);
			setState(98);
			match(STRING);
			setState(99);
			multiple_map();
			setState(100);
			match(DIFFICULTY);
			setState(101);
			match(COL);
			setState(102);
			match(INT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Multiple_mapContext extends ParserRuleContext {
		public Multiple_map_atomicContext multiple_map_atomic() {
			return getRuleContext(Multiple_map_atomicContext.class,0);
		}
		public Multiple_mapContext multiple_map() {
			return getRuleContext(Multiple_mapContext.class,0);
		}
		public Multiple_mapContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_multiple_map; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleExamGrammarListener ) ((SimpleExamGrammarListener)listener).enterMultiple_map(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleExamGrammarListener ) ((SimpleExamGrammarListener)listener).exitMultiple_map(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleExamGrammarVisitor ) return ((SimpleExamGrammarVisitor<? extends T>)visitor).visitMultiple_map(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Multiple_mapContext multiple_map() throws RecognitionException {
		Multiple_mapContext _localctx = new Multiple_mapContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_multiple_map);
		try {
			setState(108);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(104);
				multiple_map_atomic();
				setState(105);
				multiple_map();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(107);
				multiple_map_atomic();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Multiple_map_atomicContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(SimpleExamGrammarParser.STRING, 0); }
		public TerminalNode RELATOR() { return getToken(SimpleExamGrammarParser.RELATOR, 0); }
		public TerminalNode BOOLEAN() { return getToken(SimpleExamGrammarParser.BOOLEAN, 0); }
		public Multiple_map_atomicContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_multiple_map_atomic; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleExamGrammarListener ) ((SimpleExamGrammarListener)listener).enterMultiple_map_atomic(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleExamGrammarListener ) ((SimpleExamGrammarListener)listener).exitMultiple_map_atomic(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleExamGrammarVisitor ) return ((SimpleExamGrammarVisitor<? extends T>)visitor).visitMultiple_map_atomic(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Multiple_map_atomicContext multiple_map_atomic() throws RecognitionException {
		Multiple_map_atomicContext _localctx = new Multiple_map_atomicContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_multiple_map_atomic);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			match(STRING);
			setState(111);
			match(RELATOR);
			setState(112);
			match(BOOLEAN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ShortContext extends ParserRuleContext {
		public Token prompt;
		public Token answer;
		public TerminalNode QUESTION() { return getToken(SimpleExamGrammarParser.QUESTION, 0); }
		public TerminalNode DIFFICULTY() { return getToken(SimpleExamGrammarParser.DIFFICULTY, 0); }
		public TerminalNode COL() { return getToken(SimpleExamGrammarParser.COL, 0); }
		public TerminalNode INT() { return getToken(SimpleExamGrammarParser.INT, 0); }
		public List<TerminalNode> STRING() { return getTokens(SimpleExamGrammarParser.STRING); }
		public TerminalNode STRING(int i) {
			return getToken(SimpleExamGrammarParser.STRING, i);
		}
		public ShortContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_short; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleExamGrammarListener ) ((SimpleExamGrammarListener)listener).enterShort(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleExamGrammarListener ) ((SimpleExamGrammarListener)listener).exitShort(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleExamGrammarVisitor ) return ((SimpleExamGrammarVisitor<? extends T>)visitor).visitShort(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ShortContext short_() throws RecognitionException {
		ShortContext _localctx = new ShortContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_short);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			match(T__1);
			setState(115);
			match(QUESTION);
			setState(116);
			((ShortContext)_localctx).prompt = match(STRING);
			setState(117);
			((ShortContext)_localctx).answer = match(STRING);
			setState(118);
			match(DIFFICULTY);
			setState(119);
			match(COL);
			setState(120);
			match(INT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
